upddated background image:

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("https://static1.squarespace.com/static/568c7ee8841aba419c458596/568cd5249cadb64c795d08bb/56e3a9e260b5e97c530102dd/1457939697669/newspaper_texture2847.jpg?format=1500w");
+	background-image: url("../newspaper.jpg");
 	font-family: 'Julius Sans One', sans-serif;
 
 }
